--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -65,9 +65,9 @@
       <!-- ============================================================== -->
       <!-- Right sidebar toggle - style you can find in rightsidebar.component.scss -->
       <!-- ============================================================== -->
-      <button (click)="end.toggle()" mat-icon-button class="ml-xs overflow-visible">
+      <!--<button (click)="end.toggle()" mat-icon-button class="ml-xs overflow-visible">
         <mat-icon>settings</mat-icon>
-      </button>
+      </button>-->
     </div>
 
   </mat-toolbar>
