Se comenta accion de prueba

--- a/src/app/pages/operations/catalogs/customers/customers.component.html
+++ b/src/app/pages/operations/catalogs/customers/customers.component.html
@@ -76,8 +76,8 @@
 			</mat-card-content>
 		</mat-card>
 	</div>
-	<button (click)="captureScreen()"></button>
-	<div id="pdf">
+	<!-- <div id="pdf">
+		<button (click)="captureScreen()"></button>
 		<h1>hello, peter!</h1>
-	</div>
+	</div> -->
 </div>
