--- a/src/app/pages/operations/process/work-orders/work-format/work-format.component.html
+++ b/src/app/pages/operations/process/work-orders/work-format/work-format.component.html
@@ -4,6 +4,8 @@
 <mat-dialog-content class="pb-3">
   <div fxLayout="column" class="form-field-outer">
     <div fxLayout="row wrap" class="align-items-center">
+    
+     
       <div fxFlex="100" fxFlex.gt-md="100">
         <div class="m-r-15 m-l-15">
           <p class="title"><small>BOMBAS VILLASANA S.A. DE C.V </small></p>
@@ -15,7 +17,11 @@
           </p>
           <p class="title"><small>bombas.villasana@bovisa.com.mx</small></p>
         </div>
+        <div fxFlex.gt-md="35" class="text-right">
+          <button mat-raised-button (click)="valid()" color="primary">Imprimir</button>
       </div>
+      </div>
+      
     </div>
   </div>
   <div fxLayout="column" class="form-field-outer">
@@ -84,7 +90,7 @@
       </div>
       <div fxFlex="100" fxFlex.gt-md="33">
         <div class="m-r-15 m-l-15">
-          <b for="">Stock:&nbsp;</b>
+          <b for="">Stock:&nbsp;</b>{{ order.stock }}
         </div>
       </div>
       <div fxFlex="100" fxFlex.gt-md="33">
