--- a/src/app/pages/operations/process/work-orders/work-orders.component.html
+++ b/src/app/pages/operations/process/work-orders/work-orders.component.html
@@ -1,73 +1,93 @@
 <mat-card>
-    <mat-card-content>
-        <mat-card-title>Ordenes de trabajo</mat-card-title>
-        <div fxLayout="row wrap" class="align-items-center">
-            <div fxFlex.gt-md="65" fxFlex.gt-lg="25" fxFlex="100">
-                <!-- <mat-form-field>
+  <mat-card-content>
+    <mat-card-title>Ordenes de trabajo Test </mat-card-title>
+    <div fxLayout="row wrap" class="align-items-center">
+      <div fxFlex.gt-md="65" fxFlex.gt-lg="25" fxFlex="100">
+        <!-- <mat-form-field>
                      <input matInput type='text' class="form-control" placeholder='Buscar orden' (keyup)='updateFilter($event)'
                     /> -
                 </mat-form-field> -->
-            </div>
-            <div fxFlex.gt-md="35" class="text-right">
-                <button mat-raised-button (click)="openDialog('Nueva',{})" color="primary">Nueva Orden de Trabajo</button>
-            </div>
-        </div>
-       
-        <div fxLayout="row wrap">
-            <div fxFlex="100">
-                
-                        <div class="table-responsive">
-                            <table mat-table [dataSource]="dataSource"  class="table employee-list no-wrap">
-        
-                                <ng-container matColumnDef="#">
-                                    <th mat-header-cell *matHeaderCellDef> # </th>
-                                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                                </ng-container>
-        
-                                <ng-container matColumnDef="type_bomb">
-                                    <th mat-header-cell *matHeaderCellDef> Tipo de bomba </th>
-                                    <td mat-cell *matCellDef="let element"> {{element.bomb}} </td>
-                                </ng-container>
+      </div>
+      <div fxFlex.gt-md="35" class="text-right">
+        <button
+          mat-raised-button
+          (click)="openDialog('Nueva', {})"
+          color="primary"
+        >
+          Nueva Orden de Trabajo
+        </button>
+      </div>
+    </div>
 
-                                <ng-container matColumnDef="customer">
-                                    <th mat-header-cell *matHeaderCellDef> Cliente </th>
-                                    <td mat-cell *matCellDef="let element"> {{element.customer}} </td>
-                                </ng-container>
-        
-                                <ng-container matColumnDef="brand">
-                                    <th mat-header-cell *matHeaderCellDef> Marca </th>
-                                    <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
-                                </ng-container>
-        
-                                <ng-container matColumnDef="model">
-                                    <th mat-header-cell *matHeaderCellDef> Modelo </th>
-                                    <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-                                </ng-container>
-        
-                                <ng-container matColumnDef="created_at">
-                                    <th mat-header-cell *matHeaderCellDef> Fecha de creacion </th>
-                                    <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
-                                </ng-container>
-        
-                                <ng-container matColumnDef="action">
-                                    <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                                    <td mat-cell *matCellDef="let element" class="action-link">
-                                        <a (click)="editData('Editar',element)" class="m-r-10 cursor-pointer"><i class="fa fa-pencil"></i></a>
-                                        <a (click)="delete(element)" class="m-r-10 cursor-pointer">
-                                            <i class="fa fa-trash text-danger"></i>
-                                        </a>
-                                        <a (click)="viewFormart('Imprimir',element)" class="m-r-10 cursor-pointer">
-                                            <i class="fa fa-print text-success"></i>
-                                        </a>
-                                    </td>
-                                </ng-container>
-        
-                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                            </table>
-                            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-                        </div>
-            </div>
+    <div fxLayout="row wrap">
+      <div fxFlex="100">
+        <div class="table-responsive">
+          <table
+            mat-table
+            [dataSource]="dataSource"
+            class="table employee-list no-wrap"
+          >
+            <ng-container matColumnDef="#">
+              <th mat-header-cell *matHeaderCellDef>#</th>
+              <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="type_bomb">
+              <th mat-header-cell *matHeaderCellDef>Tipo de bomba</th>
+              <td mat-cell *matCellDef="let element">{{ element.bomb }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="customer">
+              <th mat-header-cell *matHeaderCellDef>Cliente</th>
+              <td mat-cell *matCellDef="let element">{{ element.customer }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="brand">
+              <th mat-header-cell *matHeaderCellDef>Marca</th>
+              <td mat-cell *matCellDef="let element">{{ element.brand }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="model">
+              <th mat-header-cell *matHeaderCellDef>Modelo</th>
+              <td mat-cell *matCellDef="let element">{{ element.model }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="created_at">
+              <th mat-header-cell *matHeaderCellDef>Fecha de creacion</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.created_at }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef>Acciones</th>
+              <td mat-cell *matCellDef="let element" class="action-link">
+                <a
+                  (click)="editData('Editar', element)"
+                  class="m-r-10 cursor-pointer"
+                  ><i class="fa fa-pencil"></i
+                ></a>
+                <a (click)="delete(element)" class="m-r-10 cursor-pointer">
+                  <i class="fa fa-trash text-danger"></i>
+                </a>
+                <a
+                  (click)="viewFormart('Imprimir', element)"
+                  class="m-r-10 cursor-pointer"
+                >
+                  <i class="fa fa-print text-success"></i>
+                </a>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+          <mat-paginator
+            [pageSizeOptions]="[5, 10, 20]"
+            showFirstLastButtons
+          ></mat-paginator>
         </div>
-    </mat-card-content>
+      </div>
+    </div>
+  </mat-card-content>
 </mat-card>
