--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,10 +1,10 @@
-<div class="login-register" style="background-image:url(assets/images/background/login-register.jpg);">
+<div class="login-register" style="background-image:url(assets/images/background/login.png);">
     <div class="login-register-box">
         <mat-card>
             <mat-card-content>
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <div class="text-center">
-                        <img alt="homepage" src="assets/images/logo-icon.png">
+                        <img alt="homepage" src="assets/images/logo-bovisa.png">
                         <h4 class="m-t-0">Iniciar Sesión</h4>
                     </div>
 
@@ -12,35 +12,35 @@
                         <!-- col full-->
                         <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
                             <mat-form-field>
-                                <input matInput placeholder="Username" [formControl]="form.controls['username']">
+                                <input matInput placeholder="Usuario" [formControl]="form.controls['username']">
                             </mat-form-field>
-                            <small *ngIf="form.controls['username'].hasError('required') && form.controls['username'].touched" class="text-danger support-text">Username is required.</small>
+                            <small *ngIf="form.controls['username'].hasError('required') && form.controls['username'].touched" class="text-danger support-text">El usuario es requerido.</small>
                         </div>
                         <!-- col full-->
                         <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
                             <mat-form-field>
-                                <input matInput type="password" placeholder="Password" [formControl]="form.controls['password']">
+                                <input matInput type="password" placeholder="Contraseña" [formControl]="form.controls['password']">
                             </mat-form-field>
-                            <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="text-danger support-text">Password is required.</small>
+                            <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="text-danger support-text">El password es requerido.</small>
                         </div>
                         <!-- col half-->
                         <div fxFlex.gt-sm="50" fxFlex.gt-xs="50">
-                            <mat-checkbox color="warn">Remember me</mat-checkbox>
+                            <mat-checkbox color="warn">Guardar sesión</mat-checkbox>
                         </div>
                         <!-- col half-->
                         <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" class="text-right">
-                            <a [routerLink]="['/authentication/forgot']" class="link">Forgot pwd?</a>
+                            <a [routerLink]="['/authentication/forgot']" class="link">¿Olvidaste tu contraseña?</a>
                         </div>
                         <!-- col full-->
                         <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
-                            <button mat-raised-button color="primary" class="btn-block btn-lg m-t-20 m-b-20" type="submit" [disabled]="!form.valid">Login</button>
+                            <button mat-raised-button color="primary" class="btn-block btn-lg m-t-20 m-b-20" type="submit" [disabled]="!form.valid">Iniciar Sesión</button>
                         </div>
                         <!-- col full-->
-                        <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100" class="text-center">
+                     <!--    <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100" class="text-center">
                             <span>Don't have an account?
-                                <a [routerLink]="['/authentication/register']" class="text-info link">Register</a>
+                                <a [routerLink]="['/authentication/register']" class="text-info link">Registrar</a>
                             </span>
-                        </div>
+                        </div> -->
                     </div>
                 </form>
             </mat-card-content>
