--- a/src/app/pages/operations/process/work-orders/work-orders.component.html
+++ b/src/app/pages/operations/process/work-orders/work-orders.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <mat-card-title>Ordenes de trabajo Test </mat-card-title>
+    <mat-card-title>Ordenes de trabajo</mat-card-title>
     <div fxLayout="row wrap" class="align-items-center">
       <div fxFlex.gt-md="65" fxFlex.gt-lg="25" fxFlex="100">
         <!-- <mat-form-field>
@@ -8,14 +8,17 @@
                     /> -
                 </mat-form-field> -->
       </div>
-      <div fxFlex.gt-md="35" class="text-right">
-        <button
-          mat-raised-button
-          (click)="openDialog('Nueva', {})"
-          color="primary"
-        >
-          Nueva Orden de Trabajo
-        </button>
+      <!-- <ng-container *ngIf="user.role_id == 3 && action == 'Editar' "></ng-container> -->
+      <div *ngIf="user.role_id == 2">
+        <div fxFlex.gt-md="35" class="text-right">
+          <button
+            mat-raised-button
+            (click)="openDialog('Nueva', {})"
+            color="primary"
+          >
+            Nueva Orden de Trabajo
+          </button>
+        </div>
       </div>
     </div>
 
@@ -62,6 +65,11 @@
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef>Acciones</th>
               <td mat-cell *matCellDef="let element" class="action-link">
+                  <a *ngIf="user.role_id == 3 && element.status == 3"
+                    (click)="oderDetail('Detalles', element)"
+                    class="m-r-10 cursor-pointer"
+                    ><i class="fa fa-calendar-check-o"></i
+                  ></a>
                 <a
                   (click)="editData('Editar', element)"
                   class="m-r-10 cursor-pointer"
