--- a/src/app/pages/operations/process/work-orders/work-orders.component.html
+++ b/src/app/pages/operations/process/work-orders/work-orders.component.html
@@ -65,11 +65,12 @@
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef>Acciones</th>
               <td mat-cell *matCellDef="let element" class="action-link">
-                  <a *ngIf="user.role_id == 3 && element.status == 3"
-                    (click)="oderDetail('Detalles', element)"
-                    class="m-r-10 cursor-pointer"
-                    ><i class="fa fa-calendar-check-o"></i
-                  ></a>
+                <a
+                  *ngIf="user.role_id == 3 && element.status == 3"
+                  (click)="oderDetail('Detalles', element)"
+                  class="m-r-10 cursor-pointer"
+                  ><i class="fa fa-calendar-check-o"></i
+                ></a>
                 <a
                   (click)="editData('Editar', element)"
                   class="m-r-10 cursor-pointer"
